@@ -1,6 +1,11 @@
+2005-01-08  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-capplet.c (wallpaper_properties_init): Fix the leaks
+	in the scaling type option menu creation correctly
+
 2005-01-02  Thomas Cataldo  <thomas.cataldo@aliacom.fr>
 
-	* gnome-wp-capplet.c: (wallpaper_properties_init): plug icon
+	* gnome-wp-capplet.c (wallpaper_properties_init): plug icon
 	filename leak.
 
 2004-12-11  Rodney Dawes  <dobey@novell.com>
